[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/interface/menu/Menu.gd" type="Script" id=1]


[node name="Menu" type="PanelContainer"]
size_flags_horizontal = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 70.0
margin_bottom = 93.0

[node name="Header" type="Label" parent="List"]
margin_right = 63.0
margin_bottom = 14.0
size_flags_vertical = 2
text = "Menu"
align = 1

[node name="Settings" type="Button" parent="List"]
margin_top = 18.0
margin_right = 63.0
margin_bottom = 38.0
toggle_mode = true
text = "Settings"

[node name="Host" type="Button" parent="List"]
margin_top = 42.0
margin_right = 63.0
margin_bottom = 62.0
toggle_mode = true
text = "Host"

[node name="Exit" type="Button" parent="List"]
margin_top = 66.0
margin_right = 63.0
margin_bottom = 86.0
text = "Exit"
[connection signal="pressed" from="List/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="List/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="List/Exit" to="." method="_on_Exit_pressed"]
